# Hackathon-II

./: .gitignore  Info.md  SOLVED.md
.claude/agents/: auth-expert.md  crud-specialist.md  deployment-guru.md  frontend-master.md  urdu-supporter.md
.claude/skills/backend-auth/: SKILL.md
.claude/skills/crud-rest-api/: SKILL.md
.claude/skills/framer-motion/: SKILL.md
.claude/skills/frontend-api-client/: SKILL.md
.specify/memory/: constitution.md
phase1-console/: IMPLEMENTATION_STATUS.md  README.md  pyproject.toml
phase1-console/src/todo_app/: cli.py  main.py  models.py  storage.py
phase1-console/tests/: test_cli.py  test_models.py  test_storage.py
phase2-web/: AUTHENTICATION_FIX.md  FOREIGN_KEY_FIX.md  QUICKSTART.md  SETUP_COMPLETE.md  TESTING.md
phase2-web/backend/: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
phase2-web/backend/app/: main.py
phase2-web/backend/app/auth/: __init__.py  dependencies.py
phase2-web/backend/app/core/: __init__.py  config.py  security.py
phase2-web/backend/app/database/: __init__.py  connection.py  init.py
phase2-web/backend/app/models/: task.py  user.py
phase2-web/backend/app/routes/: auth.py  tasks.py
phase2-web/backend/app/schemas/: __init__.py  auth.py  task.py
phase2-web/frontend/: README.md  SETUP.md  middleware.ts  package-lock.json  package.json
specs/001-cli-todo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-phase2-web-todo/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+124 files in other folders)
