[project]
name = "todo-app"
version = "1.0.0"
description = "Phase 1: In-Memory Console Todo App"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.4.0"]

[project.scripts]
todo = "todo_app.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
